# dotfiles

./: .envrc  .gitconfig  .gitignore  .gitmodules  .p10k.zsh  .pre-commit-config.yaml  .tmux.conf  .vimrc  .zshrc  CLAUDE.local.md  CLAUDE.md  Makefile  README.md  TODO.md  config_direnv_direnvrc  config_fish_config.fish  config_nvim_coc-settings.json  init.py  issue-31-gita-implementation-plan.md  issue-47-plan.md  issue-53-plan.md  issue-7-updated-plan.md  logging_config.py  packages.yaml  pkgstatus.py  plan.md  pyproject.toml  pyrightconfig.json  stylua.toml  swman.py
.byobu/: .tmux.conf
.claude/: github_comment_template.md  settings.local.json
.claude/commands/: detailed-status.md  evaluate-issues.md  implement.md  plan.md  quick-status.md  status.md
.github/ISSUE_TEMPLATE/: claude-task.md
.github/workflows/: ci.yml  pr.yml
.irssi/scripts/autoload/: notifier-minivan.pl
.pre-commit-hooks/: forbid-review-markers.sh
alacritty/: alacritty.toml
byobu/: status
copy/: .gitconfig  .netrc  .offlineimaprc
copy/.config/pycard/: pycard.conf
copy/.irssi/: config
copy/.irssi/scripts/: notifier-minivan.pl
copy/.mutt/: alias  mailcap  muttrc  view_attachment.sh
direnv/: direnvrc
docs/: TEST_RESULTS.md
docs/plans/: 2025-10-24-link-local-bin.md
docs/testing/: interactive-sudo-commands.md
fish/: config.fish  fish_plugins  fish_variables
fish/completions/: cog.fish
fish/conf.d/: debian.fish  fish-ssh-agent.fish
fish/functions/: README-pkgstatus.md  gita-batch-fetch.fish  gita-check-behind.fish  gita-repo-discovery.fish  gita-worktree-analyze.fish  gita-worktree-audit-repo.fish  gita-worktree-audit.fish  gita-worktree-check.fish  gita-worktree-cleanup.fish  gita-worktree-detect-issues.fish  gita-worktree-detect.fish  gita-worktree-pull.fish  gita-worktree-status.fish  irssi.fish  ll.fish  ls.fish  lt.fish  pkgstatus-config.fish  pkgstatus.fish  wget.fish  wt-clean.fish  wt-goto.fish  wt-list.fish  wt-new.fish  wt-remove.fish  wt-root.fish
git/: config  ignore  message.txt
init/: 20_mint_apt.sh  20_ubuntu_apt.sh  50_python.sh  50_virtualenv.sh  80_zsh.sh  99_text
install_scripts/: install_nvm.sh
lazy_nvim/: lazy-lock.json  lazyvim.json
lazy_nvim/lua/config/: lazy.lua  options.lua
lazy_nvim/lua/plugins/: conform.lua  gitlab-sast.lua  (+5 more)
link/: .ackrc  .checkoutmanager.cfg  .gitconfig  .gitglobalignore  .gitignore_global  .hgrc  .notmuch-config  .vimrc  .zshrc  gitglobalignore
link/.byobu/: .tmux.conf
link/.virtualenvs/: postactivate
local_bin/: run-claude.sh
nvim/: coc-settings.json  init.lua  init.vim  init.vim_old  lazy-lock.json
source/: 50_editor.sh  50_file.sh  50_history.sh  50_ubuntu.sh
src/: pyproject.toml
src/dotfiles/: __init__.py  console_output.py  init.py  logging_config.py  output_formatting.py  pkgstatus.py  process_helper.py  project_status.py  swman.py
test/: Containerfile.arch  Containerfile.debian  Dockerfile.arch  Dockerfile.debian  Dockerfile.ubuntu  fish_test_framework.fish  run_fish_tests.fish  run_test.sh  run_tests.sh  test_gita_batch_fetch.fish  test_gita_interactive_functions.fish  test_gita_repo_discovery.fish  test_gita_worktree_check.fish  test_gita_worktree_detect.fish
tests/: conftest.py  test_dockerfile_manifest.sh  test_init.py  test_logging_config.py  test_output_formatting.py  test_package_manifest.py  test_pkgstatus.py  test_process_helper.py  test_project_status.py  test_swman.py
tmux/: tmux.conf
(+2 files in other folders)
