[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles and system management tools"
requires-python = ">=3.12.3"
dependencies = [
    "structlog>=25.4.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
dotfiles-init = "dotfiles.init:main"
dotfiles-swman = "dotfiles.swman:main"
dotfiles-pkgstatus = "dotfiles.pkgstatus:main"
dotfiles-status = "dotfiles.project_status:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles"]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
]
test = [
    "faker>=37.11.0",
    "hypothesis>=6.140.3",
    "pytest>=8.4.2",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
    
